--- a/Oral_Proposal.html
+++ b/Oral_Proposal.html
@@ -405,7 +405,7 @@ TP
 
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Thanks</h2></hgroup><article  id="thanks">
 
-</article></slide><slide class=''><hgroup><h2>Prediction Comparison: DSI: 0.686</h2></hgroup><article  id="prediction-comparison-dsi-0.686" class="nb2">
+</article></slide><slide class=''><hgroup><h2>Prediction Comparison: DSI: 0.686</h2></hgroup><article  id="prediction-comparison-dsi-0.686">
 
 <p><img src="figure/Prediction_Figure_303.png" style="width:500px;  display: block; margin: auto;"></p>
 
