--- a/Pfizer_2015_Talk.html
+++ b/Pfizer_2015_Talk.html
@@ -359,17 +359,20 @@ Result: <img src="figure/Thresh_Image.png" style="width:100%;  display: block; m
 \begin{equation}
 \bar{x}(v) = \frac{1}{N(v)} \sum_{k \in N(v)} x_k(v) \label{eq:mean}
 \end{equation}
-\]</p>
+\] <img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_moment1.png" style="width:100%;  display: block; margin: auto;" alt="MISTIE LOGO"></p>
 
 </article></slide><slide class=''><hgroup><h2>Local Moment Information: Higher Moments</h2></hgroup><article  id="local-moment-information-higher-moments">
 
-<p>Local standard deviation (SD), skew, and kurtosis were also calculated: \[
+<div class="columns-2" style="font-size: 20px;">
+<p>\[
 \begin{align}
 \text{SD}(v) &amp;= \sqrt{ \frac{1}{N(v)} \sum_{k \in N(v)} \left(x_k(v) - \bar{x}(v)\right)^2 } \\
 \text{Skew}(v) &amp;= \frac{ \frac{1}{N(v)} \sum\limits_{k \in N(v)} (x_k(v)-\bar{x}(v) )^3 } {\left[ \frac{1}{N(v)} \sum\limits_{k \in N(v)} (x_k(v)- \bar{x}(v))^2\right]^{3/2}} \\
-\text{Kurtosis}(v) &amp;= \frac{ \frac{1}{N(v)} \sum\limits_{k \in N(v)} (x_k(v)-\bar{x}(v) )^4 }{ \left( \frac{1}{N(v)} \sum\limits_{k \in N(v)} \left(x_k(v) - \bar{x}(v)\right)^2\right)^2} \\
+\text{Kurtosis}(v) &amp;= \frac{ \frac{1}{N(v)} \sum\limits_{k \in N(v)} (x_k(v)-\bar{x}(v) )^4 }{ \left( \frac{1}{N(v)} \sum\limits_{k \in N(v)} \left(x_k(v) - \bar{x}(v)\right)^2\right)^2} 
 \end{align}
 \]</p>
+
+<br> <img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_moment2.png" style="width:32%;  display: block; margin: auto;" alt="MISTIE LOGO"> <img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_moment3.png" style="width:32%;  display: block; margin: auto;" alt="MISTIE LOGO"> <img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_moment4.png" style="width:32%;  display: block; margin: auto;" alt="MISTIE LOGO"></div>
 
 </article></slide><slide class=''><hgroup><h2>Standardized-to-template Intensity</h2></hgroup><article  id="standardized-to-template-intensity">
 
@@ -379,9 +382,16 @@ z_{i,\text{template}}(v) = \frac{x_{i}(v) - M(v)}{S(v)}
 
 </article></slide><slide class=''><hgroup><h2>Global Head Information: Smoothed Images</h2></hgroup><article  id="global-head-information-smoothed-images">
 
-<p>We also created images which were obtained by smoothing the original image using large Gaussian kernels (\(\sigma = 10mm^3, 20mm^3\)), which can capture any potential homogeneity throughout the scan, denoted by \(s_{i,5}(v)\), \(s_{i,10}(v)\) and \(s_{i,20}(v)\), respectively.</p>
+<p>Smoothing the original image using large Gaussian kernels (\(\sigma = 10mm^3, 20mm^3\)) can capture any potential homogeneity throughout the scan.</p>
 
-<p><img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_smooth10.png" style="width:50%;  display: block; margin: auto;" alt="MISTIE LOGO"> <img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_smooth20.png" style="width:50%;  display: block; margin: auto;" alt="MISTIE LOGO"></p>
+<div class="columns-2">
+<p>\(\sigma = 10\)</p>
+
+<p><img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_smooth10.png" style="width:100%; display: block; margin: auto;" alt="MISTIE LOGO"></p>
+
+<p>\(\sigma = 20\)</p>
+
+<img src="figure/161-413_20110710_1619_CT_2_HEAD_Head_smooth20.png" style="width:100%;  display: block; margin: auto;" alt="MISTIE LOGO"></div>
 
 </article></slide><slide class=''><hgroup><h2>Covariates <img src="figure/Covariates2.png" style="width:550px;  display: block; margin: auto;" alt="MISTIE LOGO"></h2></hgroup><article  id="covariates">
 
